; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_print_time.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_print_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_NOPTS_VALUE = common dso_local global double 0.000000e+00, align 8
@.str = private unnamed_addr constant [3 x i8] c"no\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @print_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @print_time(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to double*
  %9 = load double, double* %8, align 8
  store double %9, double* %6, align 8
  %10 = load double, double* %6, align 8
  %11 = load double, double* @MP_NOPTS_VALUE, align 8
  %12 = fcmp oeq double %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @HAS_NOPTS(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = call i8* @talloc_strdup(i32* null, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %18, i8** %3, align 8
  br label %22

19:                                               ; preds = %13, %2
  %20 = load double, double* %6, align 8
  %21 = call i8* @talloc_asprintf(i32* null, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), double %20)
  store i8* %21, i8** %3, align 8
  br label %22

22:                                               ; preds = %19, %17
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i64 @HAS_NOPTS(i32*) #1

declare dso_local i8* @talloc_strdup(i32*, i8*) #1

declare dso_local i8* @talloc_asprintf(i32*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
